プログラミング言語.txt
Last login: Wed Jul  5 11:55:47 on ttys000
mashikoryoutarou-no-MacBook-Air:~ mashikoryoutarou$ python
Python 3.6.0 |Anaconda custom (x86_64)| (default, Dec 23 2016, 13:19:00) 
[GCC 4.2.1 Compatible Apple LLVM 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import turtle
>>> turtle = turtle.Turtle()
>>> turtle.position()
(0.00,0.00)
>>> turtle.home()
>>> turtle.clear()
>>> turtle.forward(200)
>>> turtle.left(120)
>>> turtle.forward(200)
>>> turtle.left(120)
>>> turtle.forward(200)
>>> 
>>> turtle.home()
>>> turtle.clear()
>>> for i in range(3):
... 
  File "<stdin>", line 2
    
    ^
IndentationError: expected an indented block
>>> turtle.forward(200)
>>> turtle.left(120)
>>> 
>>> turtle.home()
>>> turtle.clear()
>>> for i in range(5):
... 
  File "<stdin>", line 2
    
    ^
IndentationError: expected an indented block
>>> turtle.forward(200)
>>> turtle.left(144)
>>> 
>>> import random
>>> turtle.home()
>>> turtle.clear()
>>> while True:
... 
  File "<stdin>", line 2
    
    ^
IndentationError: expected an indented block
>>> turtle.left(random.randint(1,360))
>>> turtle.forward(15)
>>> 
>>> import random
>>> r = 100
>>> turtle.home()
>>> turtle.clear()
>>> while turtle.distance(0, 0) < r:
... 
  File "<stdin>", line 2
    
    ^
IndentationError: expected an indented block
>>> r:turtle.left(random.randint(1,360))
>>> turtle.forward(15)
>>> 
